<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aplicaciones.carlosjara.com.concentrate_icegame.Acerca"
    tools:showIn="@layout/activity_acerca"
    android:background="#6ce8fe">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo1"
        android:id="@+id/TituloSeleccion1"
        android:backgroundTint="#0105ff"
        android:fontFamily="@string/Titulo1"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo2"
        android:id="@+id/textView"
        android:backgroundTint="#0105ff"
        android:fontFamily="@string/Titulo2"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_below="@+id/TituloSeleccion1"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/brain"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView6"
        android:contentDescription="Icono" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Desarrollador"
        android:id="@+id/textView7"
        android:fontFamily="@string/Desarrollador"
        android:textSize="18sp"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gitHub"
        android:id="@+id/textView8"
        android:fontFamily="@string/Desarrollador"
        android:textSize="20sp"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:id="@+id/textView9"
        android:fontFamily="@string/Desarrollador"
        android:textSize="20sp"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
