<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aplicaciones.carlosjara.com.concentrate_icegame.SeleccionJugadores"
    tools:showIn="@layout/activity_seleccion_jugadores"
    android:background="#6ce8fe">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo1"
        android:id="@+id/TituloSeleccion1"
        android:backgroundTint="#0105ff"
        android:fontFamily="@string/Titulo1"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo2"
        android:id="@+id/textView"
        android:backgroundTint="#0105ff"
        android:fontFamily="@string/Titulo2"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_below="@+id/TituloSeleccion1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Selecciontxt"
        android:id="@+id/Selecciontext"
        android:textColor="#000000"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BJugador2"
        android:id="@+id/BJugador2"
        android:onClick="seleccionNombres"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/CantidadTxt"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="1"
        android:ems="10"
        android:id="@+id/CantidadTxt"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
