<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aplicaciones.carlosjara.com.concentrate_icegame.LogicaJuego"
    tools:showIn="@layout/activity_logica_juego"
    android:background="#6ce8fe">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo1"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:fontFamily="@string/Titulo1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo2"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@string/Titulo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/NombreJugador"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/PuntajeJugador"
        android:layout_alignTop="@+id/NombreJugador"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugador11"
        android:id="@+id/textView4"
        android:layout_above="@+id/PuntajeJugador"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntaje11"
        android:id="@+id/textView5"
        android:layout_above="@+id/PuntajeJugador"
        android:layout_alignEnd="@+id/textView3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center|left"
        android:layout_alignStart="@id/textView4"
        android:layout_toEndOf="@id/textView5"
        android:layout_below="@+id/PuntajeJugador">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="4">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button"
                android:layout_row="0"
                android:layout_column="0"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button2"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button6"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button10"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button14"
                android:layout_row="1"
                android:layout_column="3"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button3"
                android:layout_row="2"
                android:layout_column="0"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button7"
                android:layout_row="2"
                android:layout_column="1"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button11"
                android:layout_row="2"
                android:layout_column="2"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button15"
                android:layout_row="2"
                android:layout_column="3"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button4"
                android:layout_row="3"
                android:layout_column="0"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button5"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button8"
                android:layout_row="3"
                android:layout_column="1"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button9"
                android:layout_row="0"
                android:layout_column="2"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button12"
                android:layout_row="3"
                android:layout_column="2"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button13"
                android:layout_row="0"
                android:layout_column="3"
                android:onClick="Seleccion"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/button16"
                android:layout_row="3"
                android:layout_column="3"
                android:onClick="Seleccion"/>

        </GridLayout>
    </ScrollView>

</RelativeLayout>
